fix: align items to center on first screen

--- a/frontend/src/components/FirstScreen/FirstScreen.css
+++ b/frontend/src/components/FirstScreen/FirstScreen.css
@@ -10,6 +10,7 @@
   box-sizing: border-box;
   display: flex;
   justify-content: flex-start;
+  align-items: center;
   flex-wrap: wrap;
 }
 
